# openvscode-farm

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
cli/: .gitignore  package.json  tsconfig.json
cli/src/: bin.ts  index.ts
cli/src/cli/: index.ts
cli/src/cli/commands/: base.ts  contest.ts  index.ts  problem.ts
src/: api.ts  config.ts  index.tsx  main.rs
variants/: Makefile  README.md  base.dockerfile  rust.dockerfile
