[package]
name = "openvscode-farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.6"
